# formal-def-20260604

./: 1_Formal_Definition.md  2_HolmesSchema.py  3_ScandalInstances.py  4_TestScandal.py  Makefile  README.md  docs.md  proc.py  pyproject.toml  tests.md
medlit/: README.md
medlit/scripts/: migrate_jsonl.py
medlit/src/: base.py  graph.py  relationship.py
medlit/tests/: conftest.py  test_medlit.py
medlit/tests/data/: R  S  X  doc_assets.jsonl  evidence.jsonl  mentions.jsonl
src/: graph.py  holmes_schema.py  scandal_instances.py
tests/: test_scandal.py
